--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "format:check": "prettier  --check \"**/*.{js,jsx,yml,yaml,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": [
