--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    "format": "prettier  --write \"**/*.{js,jsx,yml,yaml,json,css,scss,md}\""
+    "eject": "react-scripts eject",
+    "format": "prettier  --write \"**/*.{js,jsx,yml,yaml,json,css,scss,md}\"",
     "format:check": "prettier  --check \"**/*.{js,jsx,yml,yaml,json,css,scss,md}\""
   },
   "eslintConfig": {
