--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: "12.x"
       - run: npm ci
+      - run: npm run format
       - run: npm run format:check
       - run: npm test -- --coverage
         env:
